--- a/facts/src/App.css
+++ b/facts/src/App.css
@@ -1,11 +1,13 @@
 .App {
   text-align: center;
+  background-color: rgb(180, 180, 0);
+  width: 100%;
+  height: 100%;
+  display: inline;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,26 +15,134 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+/* .cards{
+  height: 150px;
+  width: 800px;
+  box-shadow: 0 0 10px 4px #d0d0d0;
+  background-color: rgb(255, 255, 255);
+  align-content: center;
+  margin-left: 600px;
+  border-radius: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  justify-content: space-between;
+} */
+
+.contents {
+  display: contents;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.cards{
+  margin: 20px;
+  padding: 20px;
+  width: 800px;
+  min-height: 200px;
+  display: grid;
+  grid-template-rows: 20px 50px 1fr 50px;
+  border-radius: 10px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
+  background: radial-gradient(#1fe4f5, #3fbafe);
+  margin-left: 25%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+
+.cat_card{
+  margin: 20px;
+  padding: 20px;
+  width: 800px;
+  min-height: 200px;
+  display: grid;
+  grid-template-rows: 20px 50px 1fr 50px;
+  border-radius: 10px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
+  background: radial-gradient(#f588d8, #c0a3e5);
+  margin-left: 25%;
+
+}
+
+.rq_card{
+  margin: 20px;
+  padding: 20px;
+  width: 800px;
+  min-height: 200px;
+  display: grid;
+  grid-template-rows: 20px 50px 1fr 50px;
+  border-radius: 10px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
+  background: radial-gradient(#76b2fe, #b69efe);
+  margin-left: 25%;
+
+
+}
+
+.rs_card{
+  margin: 20px;
+  padding: 20px;
+  width: 800px;
+  min-height: 200px;
+  display: grid;
+  grid-template-rows: 20px 50px 1fr 50px;
+  border-radius: 10px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
+  background: radial-gradient(#60efbc, #58d5c9);
+  margin-left: 25%;
+
+}
+
+.anime_card{
+    margin: 20px;
+    padding: 20px;
+    width: 800px;
+    min-height: 200px;
+    display: grid;
+    grid-template-rows: 20px 50px 1fr 50px;
+    border-radius: 10px;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+    transition: all 0.2s;
+    background: radial-gradient(#76b2fe, #b69efe);
+    margin-left: 25%;
+
+
+}
+
+
+.header{
+  color: rgb(252, 255, 212);
+}
+
+.texts{
+  color: rgb(255, 255, 255);
+  padding-top: 10%;
+  font-size: medium;
+  font-weight: 700;
+}
+
+
+.author{
+  color: whitesmoke;
+  font-size: medium;
+  font-weight: 700;
+  padding-top: 60px;
+}
+
+.source{
+  color: whitesmoke;
+  font-size: medium;
+  font-weight: 700;
+  padding-top: 60px;
+
+}
+
+@media (max-width: 1600px) {
+  .cards {
+    justify-content: center;
   }
 }
